eks/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app-service
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: prod-app
